@@ -6,6 +6,8 @@ Post-v3.4.0
       $ ovs-vsctl set Bridge br0 flow_tables:0=@N -- \
           --id=@N create Flow_Table \
                     name=table0 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
+   - Address prefix tracking is now enabled by default for both IPv4 and IPv6
+     address fields: nw_dst, nw_src, ipv6_dst and ipv6_src.
    - Userspace datapath:
      * The default zone limit, if set, is now inherited by any zone
        that does not have a specific value defined, rather than being
